force-app/main/default/objects/Custom_Log__c/Custom_Log__c.object-meta.xml
<CustomObject>
    <label>Custom Log</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Custom Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>