force-app/main/default/objects/Custom_Log__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Custom Logs</relationshipLabel>
    <relationshipName>Custom_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>