force-app/main/default/objects/Custom_Log__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Custom Logs</relationshipLabel>
    <relationshipName>Transaction_Custom_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>